# flatboat-operator

./: Cargo.toml  Dockerfile  README.md  compose.yaml  flatboat-operator.yaml
k8s/: flatboat-crds.yaml  flatboat-operator.yaml  workload-crd.yaml  workload.yaml
k8s/test-resources/: bot.yaml  workload.yaml
src/: apis.rs  controller.rs  crds.rs  k8s.rs  main.rs
