[package]
name = "flatboat-operator"
version = "0.1.0"
edition = "2024"

[dependencies]
k8s-openapi = { version = "0.25", features = ["v1_33"] }
kube = { version = "1.1", features = ["runtime", "derive"] }
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
